fix: disable arm64 dep

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -359,7 +359,7 @@ jobs:
       - build_linux-x64-musl
       - build_linux-arm64-musl
       - build_linux-x64-glibc
-      - build_linux-arm64-glibc
+      # - build_linux-arm64-glibc
       - build_win-x64
       - build_darwin-arm64
     env:
