--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,7 @@ jobs:
   build_linux-x64-glibc:
     runs-on: ubuntu-latest
     container:
-      image: rust:buster
+      image: rust
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
@@ -116,7 +116,7 @@ jobs:
   build_linux-arm64-glibc:
     runs-on: ubuntu-latest
     container:
-      image: rust:buster
+      image: rust
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
@@ -359,7 +359,7 @@ jobs:
       - build_linux-x64-musl
       - build_linux-arm64-musl
       - build_linux-x64-glibc
-      # - build_linux-arm64-glibc
+      - build_linux-arm64-glibc
       - build_win-x64
       - build_darwin-arm64
     env:
