--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stacks-encoding-native-js",
-  "version": "0.1.0",
+  "name": "@hirosystems/stacks-encoding-native-js",
+  "version": "1.1.0",
   "description": "Encoding & decoding functions for the Stacks blockchain exposed as a fast native Node.js addon",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,8 @@
     "perf-test:contract-call-args": "node --expose-gc perf-tests/decode-contract-call-args/test.js",
     "perf-test:decode-post-conditions": "node --expose-gc perf-tests/decode-post-conditions/test.js",
     "perf-test:encode-stx-address": "node perf-tests/encode-stx-address/test.js",
-    "perf-test:decode-stx-address": "node perf-tests/decode-stx-address/test.js"
+    "perf-test:decode-stx-address": "node perf-tests/decode-stx-address/test.js",
+    "prepublishOnly": "npm run build"
   },
   "author": "Matthew Little",
   "license": "GPL-3.0",
