--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -391,6 +391,10 @@ jobs:
         env:
           GH_TOKEN: ${{ steps.generate_token.outputs.token }}
 
+      - uses: actions/setup-node@v6
+        with:
+          node-version: '20'
+
       - uses: actions/download-artifact@v6
         with:
           path: native
