--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hirosystems/stacks-encoding-native-js",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "Encoding & decoding functions for the Stacks blockchain exposed as a fast native Node.js addon",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,7 @@
     "perf-test:decode-stx-address": "node perf-tests/decode-stx-address/test.js",
     "prepublishOnly": "npm run build"
   },
-  "author": "Matthew Little",
+  "author": "Hiro Systems PBC <engineering@hiro.so> (https://hiro.so)",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
