--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -368,8 +368,6 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     outputs:
-      docker_image_digest: ${{ steps.docker_push.outputs.digest }}
-      version: ${{ steps.docker_meta.outputs.version }}
       new_release_published: ${{ steps.semantic.outputs.new_release_published }}
     steps:
       - name: Generate release bot app token
@@ -411,6 +409,7 @@ jobs:
         if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+          NODE_AUTH_TOKEN: ${{ steps.generate_token.outputs.token }}
           SEMANTIC_RELEASE_PACKAGE: ${{ github.event.repository.name }}
           GIT_AUTHOR_EMAIL: "${{ steps.bot-user-id.outputs.user-id }}+${{ steps.generate_token.outputs.app-slug }}[bot]@users.noreply.github.com"
           GIT_COMMITTER_EMAIL: "${{ steps.bot-user-id.outputs.user-id }}+${{ steps.generate_token.outputs.app-slug }}[bot]@users.noreply.github.com"
