--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hirosystems/stacks-encoding-native-js.git"
+    "url": "git+https://github.com/hirosystems/stacks-encoding-native-js.git"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
