--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ perf-tests/decode-stx-address/results
 perf-tests/decode-post-conditions/results
 perf-tests/encode-stx-address/results
 perf-tests/decode-contract-call-args/results
+.DS_Store
