--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "type": "git",
     "url": "git+https://github.com/hirosystems/stacks-encoding-native-js.git"
   },
+  "prettier": "@stacks/prettier-config",
   "devDependencies": {
+    "@stacks/prettier-config": "^0.0.10",
     "@types/jest": "^27.4.1",
     "cargo-cp-artifact": "^0.1.9",
     "jest": "^27.5.1",
