--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hirosystems/stacks-encoding-native-js",
+  "name": "@stacks/codec",
   "version": "1.4.0",
   "description": "Encoding & decoding functions for the Stacks blockchain exposed as a fast native Node.js addon",
   "main": "index.js",
@@ -20,11 +20,11 @@
     "perf-test:decode-stx-address": "node perf-tests/decode-stx-address/test.js",
     "prepublishOnly": "npm run build"
   },
-  "author": "Hiro Systems PBC <engineering@hiro.so> (https://hiro.so)",
+  "author": "Stacks Labs",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hirosystems/stacks-encoding-native-js.git"
+    "url": "git+https://github.com/stx-labs/stacks-codec-js.git"
   },
   "prettier": "@stacks/prettier-config",
   "devDependencies": {
