--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hirosystems/stacks-encoding-native-js",
+  "name": "@stacks/codec",
   "version": "1.4.0",
   "description": "Encoding & decoding functions for the Stacks blockchain exposed as a fast native Node.js addon",
   "main": "index.js",
