--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,13 @@
-name: CI
+name: CI / Release
 
 on:
   push:
   workflow_dispatch:
     inputs:
-      npm-package-version:
-        description: Specify the package.json npm package version, e.g. `0.0.1-alpha.0`
+      version:
+        description: 'Version to release (e.g. 1.3.0 or 1.3.0-beta.0)'
         required: true
-      npm-package-tag:
-        description: Specify the tag to be used for npm publish, e.g. `latest`, `beta`, `alpha`
-        required: true
+        type: string
 
 jobs:
   cancel-previous-runs:
@@ -217,7 +215,10 @@ jobs:
           if-no-files-found: error
 
   test_linux-arm64-glibc:
+    if: ${{ github.event_name != 'workflow_dispatch' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     needs:
       - build_linux-arm64-glibc
     steps:
@@ -244,7 +245,10 @@ jobs:
             npm run test:js
 
   test_linux-arm64-musl:
+    if: ${{ github.event_name != 'workflow_dispatch' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     needs:
       - build_linux-arm64-musl
     steps:
@@ -269,7 +273,10 @@ jobs:
             npm run test:js
 
   test_linux-x64-glibc:
+    if: ${{ github.event_name != 'workflow_dispatch' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     container:
       image: node:18-bookworm
     needs:
@@ -291,7 +298,10 @@ jobs:
         run: npm i && npm test
 
   test_linux-x64-musl:
+    if: ${{ github.event_name != 'workflow_dispatch' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     container:
       image: node:18-alpine
     needs:
@@ -313,7 +323,10 @@ jobs:
         run: npm i && npm test
 
   test_win-x64:
+    if: ${{ github.event_name != 'workflow_dispatch' }}
     runs-on: windows-2022
+    permissions:
+      contents: read
     needs:
       - build_win-x64
     steps:
@@ -333,8 +346,10 @@ jobs:
         run: npm i && npm test
 
   test_darwin-x64:
-    if: ${{ false }}
+    if: ${{ false && github.event_name != 'workflow_dispatch' }}
     runs-on: macos-14
+    permissions:
+      contents: read
     needs:
       - build_darwin-x64
     steps:
@@ -353,54 +368,41 @@ jobs:
         working-directory: examples
         run: npm i && npm test
 
-  build-publish:
+  publish-npm:
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    runs-on: ubuntu-latest
     needs:
-      - build_linux-x64-musl
+      - build_linux-arm64-glibc
       - build_linux-arm64-musl
       - build_linux-x64-glibc
-      - build_linux-arm64-glibc
+      - build_linux-x64-musl
       - build_win-x64
+      - build_darwin-x64
       - build_darwin-arm64
     permissions:
-      contents: write
+      contents: read
       id-token: write
-      issues: write
-      pull-requests: write
-    runs-on: ubuntu-latest
-    outputs:
-      new_release_published: ${{ steps.semantic.outputs.new_release_published }}
     steps:
-      - name: Generate release bot app token
-        id: generate_token
-        uses: actions/create-github-app-token@v2
-        with:
-          app-id: ${{ secrets.HIROSYSTEMS_RELEASE_BOT_ID }}
-          private-key: ${{ secrets.HIROSYSTEMS_RELEASE_BOT_PEM }}
-
-      - name: Checkout
+      - name: Checkout tag
         uses: actions/checkout@v6
         with:
-          persist-credentials: false
+          ref: v${{ inputs.version }}
 
-      - uses: actions/setup-node@v6
+      - name: Use Node.js
+        uses: actions/setup-node@v6
         with:
-          node-version-file: .nvmrc
+          node-version-file: '.nvmrc'
 
-      - name: Upgrade to latest npm
-        run: |
-          npm install -g npm@latest
-          npm -v
+      - name: Upgrade npm
+        run: npm install -g npm@latest
 
-      - name: Get bot user ID
-        id: bot-user-id
-        run: |
-          echo "user-id=$(gh api "/users/${{ steps.generate_token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
-        env:
-          GH_TOKEN: ${{ steps.generate_token.outputs.token }}
+      - name: Install deps
+        run: npm ci --audit=false
 
       - uses: actions/download-artifact@v6
         with:
           path: native
+
       - name: Position downloaded artifacts
         run: |
           mkdir -p ./native
@@ -408,18 +410,30 @@ jobs:
           find ./native -mindepth 1 -type d -empty -delete
           ls -R ./native
 
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@b12c8f6015dc215fe37bc154d4ad456dd3833c90 # v6
-        id: semantic
-        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
-        env:
-          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
-          SEMANTIC_RELEASE_PACKAGE: ${{ github.event.repository.name }}
-          GIT_AUTHOR_EMAIL: "${{ steps.bot-user-id.outputs.user-id }}+${{ steps.generate_token.outputs.app-slug }}[bot]@users.noreply.github.com"
-          GIT_COMMITTER_EMAIL: "${{ steps.bot-user-id.outputs.user-id }}+${{ steps.generate_token.outputs.app-slug }}[bot]@users.noreply.github.com"
+      - name: Publish to npm
+        run: npm publish --provenance --access public
+
+  github-release:
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    runs-on: ubuntu-latest
+    needs:
+      - publish-npm
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout tag
+        uses: actions/checkout@v6
         with:
-          extra_plugins: |
-            @semantic-release/changelog@6.0.3
-            @semantic-release/git@10.0.1
-            @semantic-release/exec@7.1.0
-            conventional-changelog-conventionalcommits@9.1.0
+          ref: v${{ inputs.version }}
+
+      - name: Create GitHub Release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          PRERELEASE_FLAG=""
+          if echo "${{ inputs.version }}" | grep -q "-"; then
+            PRERELEASE_FLAG="--prerelease"
+          fi
+          gh release create "v${{ inputs.version }}" \
+            --generate-notes \
+            $PRERELEASE_FLAG
